# tauri_api

./: .gitignore  package.json  pnpm-lock.yaml
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: tray.rs
src-tauri/tauri-plugin-sample/: Cargo.toml
src/components/: MenuBuilder.svelte  MenuItemBuilder.svelte
src/views/: Communication.svelte  Window.svelte
