[package]
name = "tauri-plugin-sample"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-sample"

[dependencies]
tauri = {version= "2.0.6", features = [
  "protocol-asset",
  "image-ico",
  "image-png",
  "isolation",
  "macos-private-api",
  "tray-icon",
] }
log = "0.4"
serde = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = "2.0.3"
